--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/first.css">
     <link rel="preload" href="css/guide.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="stylesheet" href="css/guide.css">
+    <link rel="stylesheet" href="css/layaud.css">
 </head>
 <body>
     <nav id="main-menu">
@@ -20,13 +21,6 @@
         </div>
     </nav>
     <div id="content">
-        <aside id="main-sidebar">
-            <ul>
-                <li><a href="#colors">Colores</a></li>
-                <li><a href="#typography">Tipografía</a></li>
-                <li><a href="#content-elements">Contenido</a></li>
-            </ul>
-        </aside>
         <main>
             <article>
                 <header>
@@ -349,6 +343,29 @@
                         </div>
                     </div>
                 </section>
+                <section id="layaud">
+                    <header>
+                        <h2>Layaud</h2>
+                    </header>
+                    <div class="layaud">
+
+                        <div id="grid_layaud">Column</div>
+                        <div id="grid_layaud">Column</div>
+                        <div id="grid_layaud">Column</div>
+                        <div id="grid_layaud">Column</div>
+                        <div id="grid_layaud">Column</div>
+                        <div id="grid_layaud">Column</div>
+                        <div id="grid_layaud">Column</div>
+                        <div id="grid_layaud">Column</div>
+                        <div id="grid_layaud">Column</div>
+                        <div id="grid_layaud">Column</div>
+                        <div id="grid_layaud">Column</div>
+                        <div id="grid_layaud">Column</div>
+
+                    </div>
+    
+                </section>
+                                
             </article>
         </main>
     </div>
